<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Курьер</string>
    <string name="nav_map">Карта</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_tracks">История треков</string>
    <string name="profile_title">Профиль</string>
    <string name="courier_name">Иван Петров</string>
    <string name="courier_role">Курьер</string>
    <string name="rating_label">Рейтинг</string>
    <string name="deliveries_label">Доставки</string>
    <string name="status_label">Статус</string>
    <string name="status_online">На линии</string>
    <string name="location_permission_needed">Для работы приложения необходим доступ к геолокации</string>
    <string name="grant_permission">Разрешить</string>
</resources>
